paginas finales creadas

--- a/home.html
+++ b/home.html
@@ -37,6 +37,31 @@
             <!-- Los productos destacados se cargarán aquí dinámicamente -->
         </div>
     </section>
+
+    <section class="masa-madre">
+        <h2>Masa Madre</h2>
+        <div class="masa-madre-contenido">
+            <div class="masa-madre-item">
+                <h3>Le hacemos pliegues</h3>
+                <p>Los pliegues le dan más tensión a la masa, favorecen a la red de gluten y al mismo tiempo le dan forma al PAN.</p>
+            </div>
+            <div class="masa-madre-item">
+                <h3>Más pliegues</h3>
+                <p>Durante la primera fermentación hacemos los pliegues 2 o 3 veces cada 30 minutos.</p>
+            </div>
+            <div class="masa-madre-imagen">
+                <img src="img/foto 4.png" alt="Masa Madre">
+            </div>
+            <div class="masa-madre-item">
+                <h3>Hogaza</h3>
+                <p>Pesamos para estandarizar el formado de nuestros panes, lo dejamos leudar hasta que se duplique.</p>
+            </div>
+            <div class="masa-madre-item">
+                <h3>Formamos, leudamos y al horno!</h3>
+                <p>Formamos nuestros panes y lo dejamos leudar, luego al horno y listo, nuestros Panes más ricos.</p>
+            </div>
+        </div>
+    </section>
     <footer>
 
         <div>
